--- a/KBProgressManagement/KBProgressManagement.csproj
+++ b/KBProgressManagement/KBProgressManagement.csproj
@@ -61,10 +61,16 @@
     <Compile Include="DAO\DataProvider.cs" />
     <Compile Include="DAO\GroupFunctionsDAO.cs" />
     <Compile Include="DAO\GroupManagementDAO.cs" />
+    <Compile Include="DAO\PartMasterDAO.cs" />
+    <Compile Include="DAO\PartProcessDAO.cs" />
+    <Compile Include="DAO\StageRegistrationDAO.cs" />
     <Compile Include="DTO\AccountManagementDTO.cs" />
     <Compile Include="DTO\GroupFunctionsDTO.cs" />
     <Compile Include="DTO\GroupManagementDTO.cs" />
+    <Compile Include="DTO\PartMasterDTO.cs" />
+    <Compile Include="DTO\PartProcessDTO.cs" />
     <Compile Include="DTO\SQLConfig.cs" />
+    <Compile Include="DTO\StageRegistrationDTO.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI\frmAccountManagement.cs">
@@ -91,11 +97,23 @@
     <Compile Include="UI\frmMain.Designer.cs">
       <DependentUpon>frmMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\frmPartRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmPartRegistration.Designer.cs">
+      <DependentUpon>frmPartRegistration.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\frmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="UI\frmSettings.Designer.cs">
       <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\frmStageRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmStageRegistration.Designer.cs">
+      <DependentUpon>frmStageRegistration.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -120,8 +138,14 @@
     <EmbeddedResource Include="UI\frmMain.resx">
       <DependentUpon>frmMain.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmPartRegistration.resx">
+      <DependentUpon>frmPartRegistration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UI\frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmStageRegistration.resx">
+      <DependentUpon>frmStageRegistration.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
