--- a/KBProgressManagement/KBProgressManagement.csproj
+++ b/KBProgressManagement/KBProgressManagement.csproj
@@ -45,6 +45,22 @@
     <Reference Include="DevExpress.XtraGrid.v24.1, Version=24.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraLayout.v24.1, Version=24.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraPrinting.v24.1, Version=24.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
+    <Reference Include="MLComponent, Version=6.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MLComponent.dll</HintPath>
+    </Reference>
+    <Reference Include="MLComponent.XmlSerializers, Version=6.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MLComponent.XmlSerializers.dll</HintPath>
+    </Reference>
+    <Reference Include="MLPreviewComponent, Version=6.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MLPreviewComponent.dll</HintPath>
+    </Reference>
+    <Reference Include="MLPreviewComponent.XmlSerializers, Version=6.0.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>bin\Debug\MLPreviewComponent.XmlSerializers.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -63,12 +79,22 @@
     <Compile Include="DAO\GroupManagementDAO.cs" />
     <Compile Include="DAO\PartMasterDAO.cs" />
     <Compile Include="DAO\PartProcessDAO.cs" />
+    <Compile Include="DAO\PrintLabelDAO.cs" />
+    <Compile Include="DAO\PrintLabelDetailDAO.cs" />
+    <Compile Include="DAO\ProcessDetailForPrintLabelDAO.cs" />
+    <Compile Include="DAO\ProductPartDAO.cs" />
+    <Compile Include="DAO\ProductRegistrationDAO.cs" />
     <Compile Include="DAO\StageRegistrationDAO.cs" />
     <Compile Include="DTO\AccountManagementDTO.cs" />
     <Compile Include="DTO\GroupFunctionsDTO.cs" />
     <Compile Include="DTO\GroupManagementDTO.cs" />
     <Compile Include="DTO\PartMasterDTO.cs" />
     <Compile Include="DTO\PartProcessDTO.cs" />
+    <Compile Include="DTO\PrintLabelDetailDTO.cs" />
+    <Compile Include="DTO\PrintLabelDTO.cs" />
+    <Compile Include="DTO\ProcessDetailForPrintLabelDTO.cs" />
+    <Compile Include="DTO\ProductPartDTO.cs" />
+    <Compile Include="DTO\ProductRegistrationDTO.cs" />
     <Compile Include="DTO\SQLConfig.cs" />
     <Compile Include="DTO\StageRegistrationDTO.cs" />
     <Compile Include="Program.cs" />
@@ -102,6 +128,24 @@
     </Compile>
     <Compile Include="UI\frmPartRegistration.Designer.cs">
       <DependentUpon>frmPartRegistration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\frmPrintLabel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmPrintLabel.Designer.cs">
+      <DependentUpon>frmPrintLabel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\frmProductPart.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmProductPart.Designer.cs">
+      <DependentUpon>frmProductPart.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\frmProductRegistration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmProductRegistration.Designer.cs">
+      <DependentUpon>frmProductRegistration.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\frmSettings.cs">
       <SubType>Form</SubType>
@@ -140,6 +184,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmPartRegistration.resx">
       <DependentUpon>frmPartRegistration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmPrintLabel.resx">
+      <DependentUpon>frmPrintLabel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmProductPart.resx">
+      <DependentUpon>frmProductPart.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmProductRegistration.resx">
+      <DependentUpon>frmProductRegistration.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
