--- a/KBProgressManagement/KBProgressManagement.csproj
+++ b/KBProgressManagement/KBProgressManagement.csproj
@@ -81,6 +81,7 @@
     <Compile Include="DAO\PartProcessDAO.cs" />
     <Compile Include="DAO\PrintLabelDAO.cs" />
     <Compile Include="DAO\PrintLabelDetailDAO.cs" />
+    <Compile Include="DAO\PrintLabelHistoryDAO.cs" />
     <Compile Include="DAO\ProcessDetailForPrintLabelDAO.cs" />
     <Compile Include="DAO\ProductPartDAO.cs" />
     <Compile Include="DAO\ProductRegistrationDAO.cs" />
@@ -92,6 +93,7 @@
     <Compile Include="DTO\PartProcessDTO.cs" />
     <Compile Include="DTO\PrintLabelDetailDTO.cs" />
     <Compile Include="DTO\PrintLabelDTO.cs" />
+    <Compile Include="DTO\PrintLabelHistoryDTO.cs" />
     <Compile Include="DTO\ProcessDetailForPrintLabelDTO.cs" />
     <Compile Include="DTO\ProductPartDTO.cs" />
     <Compile Include="DTO\ProductRegistrationDTO.cs" />
@@ -147,6 +149,12 @@
     <Compile Include="UI\frmProductRegistration.Designer.cs">
       <DependentUpon>frmProductRegistration.cs</DependentUpon>
     </Compile>
+    <Compile Include="UI\frmReprint.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\frmReprint.Designer.cs">
+      <DependentUpon>frmReprint.cs</DependentUpon>
+    </Compile>
     <Compile Include="UI\frmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -193,6 +201,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmProductRegistration.resx">
       <DependentUpon>frmProductRegistration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\frmReprint.resx">
+      <DependentUpon>frmReprint.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
@@ -253,7 +264,12 @@
   <ItemGroup>
     <None Include="Resources\icons8-log-out-32.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\as.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\work-process.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
