--- a/KBProgressManagement/App.config
+++ b/KBProgressManagement/App.config
@@ -38,7 +38,7 @@
         <value></value>
       </setting>
       <setting name="DefaultAppFont" serializeAs="String">
-        <value>Times New Roman;13.8</value>
+        <value>Segoe UI;10.8</value>
       </setting>
       <setting name="CustomPaletteCollection" serializeAs="Xml">
         <value />
